2009-07-13  Kenichi Handa  <handa@m17n.org>

	* chartab.c (sub_char_table_ref_and_range): Fix the range check
	against max_char.

	* cmds.c (internal_self_insert): Check sym by SYMBOLP before
	calling XSYMBOL (sym).

2009-07-10  Kenichi Handa  <handa@m17n.org>

	* xftfont.c (xftfont_open): Fix typo: FC_RGBA->FC_HINT_STYLE.

2009-07-10  Eli Zaretskii  <eliz@gnu.org>

	* w32proc.c (syms_of_ntproc) <w32-get-true-file-attributes>: Doc
	fix.

	* w32.c (stat): Treat UNC file names as residing on remote
	drives.  (Bug#3542)

2009-07-08  Kenichi Handa  <handa@m17n.org>

	* coding.h (JIS_TO_SJIS2): Fix the code range check.

	* coding.c (detect_coding_sjis): Handle shift_jis-2004 correctly.
	(encode_coding_sjis): Fix the code range check.

2009-07-07  Chong Yidong  <cyd@stupidchicken.com>

	* fileio.c (Fsubstitute_in_file_name, Ffile_name_directory)
	(Fexpand_file_name): Copy string data properly (Bug#3772).

2009-07-07  Kenichi Handa  <handa@m17n.org>

	* .gdbinit (xcharset): Fix the treating of $arg0.

	* character.h (unibyte_has_multibyte_table): Delete extern.
	(UNIBYTE_CHAR_HAS_MULTIBYTE_P): Delete it.
	(charset_unibyte_decoder): Extern it.
	(DECODE_UNIBYTE): New macro.

	* charset.c (Fset_charset_priority): Update charset_unibyte and
	charset_unibyte_decoder.
	(init_charset_once): Initialize charset_unibyte_decoder.
	(syms_of_charset): Initialize charset_unibyte.

	* character.c (unibyte_has_multibyte_table): Delete it.
	(charset_unibyte_decoder): New variable.
	(multibyte_char_to_unibyte): Use CHAR_TO_BYTE8 instead of checking
	charset_unibyte.
	(multibyte_char_to_unibyte_safe): Likewise.
	(Funibyte_char_to_multibyte): Don't check charset_unibyte.

	* xdisp.c (get_next_display_element): Use DECODE_BYTE.
	(x_produce_glyphs): Likewise.

2009-07-03  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (Ffile_attributes): Decode user and group name by the
	locale's encoding.  (Bug#3443)

2009-07-03  Kenichi Handa  <handa@m17n.org>
